--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -580,6 +580,9 @@
         margin: 0 0 10px
       &__social
         margin-top: 10px
+  label.invalid
+    bottom: unset
+    top: -14px
 @media screen and ( max-width: 480px )
   .news
     &-item
@@ -798,3 +801,7 @@
         &:hover
           &::before
             opacity: 0.5
+  .to-top
+    &:hover
+      &::before
+        opacity: 0.2
